--- a/.gitignore
+++ b/.gitignore
@@ -77,16 +77,13 @@ celerybeat-schedule
 
 # dotenv
 .env
+!.env.example
 
 # virtualenv
 venv/
 ENV/
 
-# Spyder project settings
-.spyderproject
-
-# Rope project settings
-.ropeproject
-
-
 .idea
+.DS_STORE
+
+db.sqlite3
