--- a/PiControl/.env.example
+++ b/PiControl/.env.example
@@ -1,5 +1,5 @@
 SECRET_KEY=someSecretKey
 ROLLBAR_KEY=someSecretKey
-DEBUG=True
+APP_ENV=False
 APP_NAME=SomethingAwesome
-TIME_ZONE=AU
+TIME_ZONE=Australia/Adelaide
